--- a/src/components/ListItem/ListItem.Selected.html
+++ b/src/components/ListItem/ListItem.Selected.html
@@ -1,5 +1,4 @@
-<div class="ms-ListItem ms-ListItem--image">
-  <div class="ms-ListItem-image" style="background-color: #767676;">&nbsp;</div>
+<div class="ms-ListItem is-selected">
   <span class="ms-ListItem-primaryText">Tanya Pierce</span>
   <span class="ms-ListItem-secondaryText">Meeting notes</span>
   <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to d.</span>
