--- a/src/components/ListItem/ListItem.Unread.html
+++ b/src/components/ListItem/ListItem.Unread.html
@@ -1,5 +1,4 @@
-<div class="ms-ListItem ms-ListItem--image">
-  <div class="ms-ListItem-image" style="background-color: #767676;">&nbsp;</div>
+<div class="ms-ListItem is-unread is-selectable">
   <span class="ms-ListItem-primaryText">Tanya Pierce</span>
   <span class="ms-ListItem-secondaryText">Meeting notes</span>
   <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to d.</span>
@@ -10,5 +9,6 @@
     <div class="ms-ListItem-action"><i class="ms-Icon ms-Icon--trash"></i></div>
     <div class="ms-ListItem-action"><i class="ms-Icon ms-Icon--flag"></i></div>
     <div class="ms-ListItem-action"><i class="ms-Icon ms-Icon--pinLeft"></i></div>
+
   </div>
 </div>
