--- a/src/components/ListItem/ListItem.html
+++ b/src/components/ListItem/ListItem.html
@@ -5,8 +5,9 @@
   <span class="ms-ListItem-metaText">2:42p</span>
   <div class="ms-ListItem-selectionTarget js-toggleSelection"></div>
   <div class="ms-ListItem-actions">
-    <div class="ms-ListItem-action"><i class="ms-Icon ms-Icon--attachment"></i></div>
-    <div class="ms-ListItem-action"><i class="ms-Icon ms-Icon--x"></i></div>
+    <div class="ms-ListItem-action"><i class="ms-Icon ms-Icon--mail"></i></div>
+    <div class="ms-ListItem-action"><i class="ms-Icon ms-Icon--trash"></i></div>
     <div class="ms-ListItem-action"><i class="ms-Icon ms-Icon--flag"></i></div>
+    <div class="ms-ListItem-action"><i class="ms-Icon ms-Icon--pinLeft"></i></div>
   </div>
 </div>
