--- a/src/components/PersonaCard/PersonaCard.html
+++ b/src/components/PersonaCard/PersonaCard.html
@@ -6,10 +6,10 @@
           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
           <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
         </div>
-        <div class="ms-Persona-presence"></div>          
+        <div class="ms-Persona-presence"></div>
       </div>
       <div class="ms-Persona-details">
-        <div class="ms-Persona-primaryText">Alton Lafferty</div>
+        <div class="ms-Persona-primaryText" title="Alton Lafferty">Alton Lafferty</div>
         <div class="ms-Persona-secondaryText">Interior Designer, Contoso</div>
         <div class="ms-Persona-tertiaryText">Office: 7/1234</div>
         <div class="ms-Persona-optionalText">Available - Video capable</div>
@@ -71,7 +71,7 @@
                             <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
                           </div>
                           <div class="ms-Persona-presence"></div>
-                        </div>                            
+                        </div>
                         <div class="ms-Persona-details">
                           <div class="ms-Persona-primaryText">Douglas Fielder</div>
                           <div class="ms-Persona-secondaryText">Public Relations</div>
@@ -93,7 +93,7 @@
                           <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
                         </div>
                         <div class="ms-Persona-presence"></div>
-                      </div>                            
+                      </div>
                       <div class="ms-Persona-details">
                         <div class="ms-Persona-primaryText">Grant Steel</div>
                         <div class="ms-Persona-secondaryText">Sales</div>
@@ -115,7 +115,7 @@
                         <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
                       </div>
                       <div class="ms-Persona-presence"></div>
-                    </div>                            
+                    </div>
                     <div class="ms-Persona-details">
                       <div class="ms-Persona-primaryText">Harvey Wallin</div>
                       <div class="ms-Persona-secondaryText">Public Relations</div>
@@ -132,7 +132,7 @@
                         <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
                       </div>
                       <div class="ms-Persona-presence"></div>
-                    </div>                            
+                    </div>
                     <div class="ms-Persona-details">
                       <div class="ms-Persona-primaryText">Marcus Lauer</div>
                       <div class="ms-Persona-secondaryText">Technical Support</div>
@@ -149,7 +149,7 @@
                         <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
                       </div>
                       <div class="ms-Persona-presence"></div>
-                    </div>                            
+                    </div>
                     <div class="ms-Persona-details">
                       <div class="ms-Persona-primaryText">Marcel Groce</div>
                       <div class="ms-Persona-secondaryText">Delivery</div>
@@ -166,7 +166,7 @@
                         <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
                       </div>
                       <div class="ms-Persona-presence"></div>
-                    </div>                            
+                    </div>
                     <div class="ms-Persona-details">
                       <div class="ms-Persona-primaryText">Jessica Fischer</div>
                       <div class="ms-Persona-secondaryText">Marketing</div>
