Created CommandBar with a CommandSearch box.

--- a/src/less/Fabric.Components.less
+++ b/src/less/Fabric.Components.less
@@ -10,6 +10,7 @@
 @import '../components/Button/Button.less';
 @import '../components/Callout/Callout.less';
 @import '../components/ChoiceField/ChoiceField.less';
+@import '../components/CommandBar/CommandBar.less';
 @import '../components/ContextualMenu/ContextualMenu.less';
 @import '../components/Datepicker/DatePicker.less';
 @import '../components/Dialog/Dialog.less';
