--- a/src/templates/individual-component-example.html
+++ b/src/templates/individual-component-example.html
@@ -61,6 +61,9 @@
     .ms-NavBar-item .ms-ContextualMenu {
       position: absolute;
     }
+    .ms-CommandBar .ms-ContextualMenu {
+      position: absolute;
+    }
   </style>
 </head>
 
