--- a/src/components/Persona/Persona.less
+++ b/src/components/Persona/Persona.less
@@ -31,7 +31,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  background-color: @color-neutralTertiary;
+  background-color: @ms-color-neutralTertiary;
 }
 
 .ms-Persona-placeholder {
@@ -67,7 +67,7 @@
   left: auto;
   right: 2px;
   bottom: -1px;
-  border: 2px solid @color-white;
+  border: 2px solid @ms-color-white;
 }
 
 .ms-Persona-details {
