Remove title attribute from ms-Persona-primaryText

--- a/src/components/PersonaCard/PersonaCard.html
+++ b/src/components/PersonaCard/PersonaCard.html
@@ -9,7 +9,7 @@
         <div class="ms-Persona-presence"></div>
       </div>
       <div class="ms-Persona-details">
-        <div class="ms-Persona-primaryText" title="Alton Lafferty">Alton Lafferty</div>
+        <div class="ms-Persona-primaryText">Alton Lafferty</div>
         <div class="ms-Persona-secondaryText">Interior Designer, Contoso</div>
         <div class="ms-Persona-tertiaryText">Office: 7/1234</div>
         <div class="ms-Persona-optionalText">Available - Video capable</div>
