--- a/src/templates/individual-component-example.html
+++ b/src/templates/individual-component-example.html
@@ -5,7 +5,7 @@
 
   <title>Component <%= componentName %></title>
 
-  <link rel="stylesheet" href="../../css/fabric.css">
+  <link rel="stylesheet" href="../../../css/fabric.css">
   <link rel="stylesheet" href="<%= componentName %>.css">
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
