Start refactor of persona within persona card. Add square variant

--- a/src/components/PersonaCard/PersonaCard.Square.html
+++ b/src/components/PersonaCard/PersonaCard.Square.html
@@ -1,4 +1,4 @@
-<div class="ms-PersonaCard">
+<div class="ms-PersonaCard ms-PersonaCard--square">
   <div class="ms-PersonaCard-persona">
     <div class="ms-Persona">
       <div class="ms-Persona-imageArea">
