Use correct size variable for chevron

--- a/src/components/ContextualMenu/ContextualMenu.less
+++ b/src/components/ContextualMenu/ContextualMenu.less
@@ -109,7 +109,7 @@
 .ms-ContextualMenu-subMenuIcon,
 .ms-ContextualMenu-caretRight {
   color: @ms-color-neutralSecondary;
-  font-size: @ms-font-size-m + 1;
+  font-size: @ms-font-size-m-plus + 1;
   height: 39px;
   line-height: 40px;
   position: absolute;
