- Updated state names.

--- a/src/components/CommandBar/CommandBar.less
+++ b/src/components/CommandBar/CommandBar.less
@@ -139,7 +139,7 @@
   }
 }
 
-.ms-CommandBarItem.hideCommand {
+.ms-CommandBarItem.is-hidden {
   display: none;
 }
 
@@ -153,7 +153,8 @@
 
 .ms-CommandBarItem-overflow {
   display: none;
-  &.showOverflow {
+  
+  &.is-visible {
     display: inline-block;
   }
 }
