- Changed CommandSearch to CommandBarSearch - Fixed up modifiers and add some needed whitespace.

--- a/src/components/CommandBar/CommandBar.html
+++ b/src/components/CommandBar/CommandBar.html
@@ -1,13 +1,13 @@
 <div class="ms-CommandBar">
-  <div class="ms-CommandSearch">
-    <a class="ms-CommandSearch-iconWrapper ms-CommandSearch-iconArrowWrapper">
+  <div class="ms-CommandBarSearch">
+    <a class="ms-CommandBarSearch-iconWrapper ms-CommandBarSearch-iconArrowWrapper">
       <i class="ms-Icon ms-Icon--arrowLeft"></i>
     </a>
-    <input class="ms-CommandSearch-input" type="text" />
-    <a class="ms-CommandSearch-iconWrapper ms-CommandSearch-iconSearchWrapper" href="javascript:;">
+    <input class="ms-CommandBarSearch-input" type="text" />
+    <a class="ms-CommandBarSearch-iconWrapper ms-CommandBarSearch-iconSearchWrapper" href="javascript:;">
       <i class="ms-Icon ms-Icon--search"></i>
     </a>
-    <a class="ms-CommandSearch-iconWrapper ms-CommandSearch-iconClearWrapper ms-font-s" href="javascript:;">
+    <a class="ms-CommandBarSearch-iconWrapper ms-CommandBarSearch-iconClearWrapper ms-font-s" href="javascript:;">
       <i class="ms-Icon ms-Icon--x"></i>
     </a>
   </div>  
