Update personacard less and square variant. Add orgchart square variant. Update orgchart less

--- a/src/components/OrgChart/OrgChart.Square.html
+++ b/src/components/OrgChart/OrgChart.Square.html
@@ -3,7 +3,7 @@
     <ul class="ms-OrgChart-list">
         <li class="ms-OrgChart-listItem">
           <button class="ms-OrgChart-listItemBtn">
-            <div class="ms-Persona">
+            <div class="ms-Persona ms-Persona--square">
               <div class="ms-Persona-imageArea">
                 <div class="ms-Persona-imageCircle">
                   <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
@@ -20,7 +20,7 @@
         </li>
         <li class="ms-OrgChart-listItem">
           <button class="ms-OrgChart-listItemBtn">
-            <div class="ms-Persona">
+            <div class="ms-Persona ms-Persona--square">
               <div class="ms-Persona-imageArea">
                 <div class="ms-Persona-imageCircle">
                   <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
@@ -42,7 +42,7 @@
     <ul class="ms-OrgChart-list">
         <li class="ms-OrgChart-listItem">
           <button class="ms-OrgChart-listItemBtn">
-            <div class="ms-Persona">
+            <div class="ms-Persona ms-Persona--square">
               <div class="ms-Persona-imageArea">
                 <div class="ms-Persona-imageCircle">
                   <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
@@ -64,7 +64,7 @@
     <ul class="ms-OrgChart-list">
       <li class="ms-OrgChart-listItem">
         <button class="ms-OrgChart-listItemBtn">
-          <div class="ms-Persona">
+          <div class="ms-Persona ms-Persona--square">
             <div class="ms-Persona-imageArea">
               <div class="ms-Persona-imageCircle">
                 <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
@@ -81,7 +81,7 @@
       </li>
       <li class="ms-OrgChart-listItem">
         <button class="ms-OrgChart-listItemBtn">
-          <div class="ms-Persona">
+          <div class="ms-Persona ms-Persona--square">
             <div class="ms-Persona-imageArea">
               <div class="ms-Persona-imageCircle">
                 <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
@@ -98,7 +98,7 @@
       </li>
       <li class="ms-OrgChart-listItem">
         <button class="ms-OrgChart-listItemBtn">
-          <div class="ms-Persona">
+          <div class="ms-Persona ms-Persona--square">
             <div class="ms-Persona-imageArea">
               <div class="ms-Persona-imageCircle">
                 <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
@@ -115,7 +115,7 @@
       </li>
       <li class="ms-OrgChart-listItem">
         <button class="ms-OrgChart-listItemBtn">
-          <div class="ms-Persona">
+          <div class="ms-Persona ms-Persona--square">
             <div class="ms-Persona-imageArea">
               <div class="ms-Persona-imageCircle">
                 <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
