--- a/src/components/Persona/Persona.less
+++ b/src/components/Persona/Persona.less
@@ -90,7 +90,7 @@
 	color: @ms-color-neutralSecondary;
 	font-family: @ms-font-family-regular;
 	font-size: @ms-font-size-s;
-	padding-top: 7px;
+	padding-top: 8px;
 	white-space: nowrap;
 }
 
@@ -105,6 +105,10 @@
 .ms-Persona.ms-Persona--square {
 	.ms-Persona-imageArea {
 		background-color: @ms-color-neutralTertiary;
+	}
+
+	.ms-Persona-imageCircle {
+		border-radius: 0;
 	}
 
 	.ms-Persona-presence {
