--- a/src/components/PersonaCard/PersonaCard.less
+++ b/src/components/PersonaCard/PersonaCard.less
@@ -8,11 +8,12 @@
 //
 // The persona card docks to the bottom of the viewport.
 .ms-PersonaCard {
+  .ms-font-m;
+  .ms-u-slideUpIn10;
   bottom: 0;
   left: 0;
   position: fixed;
   right: 0;
-  .ms-u-slideUpIn10;
   outline: 1px solid transparent;
 }
 
@@ -21,13 +22,12 @@
 
   // Overrides for persona
   .ms-Persona-imageArea {
-    width: 96px;
-    height: 96px;
-    background-color: @ms-color-neutralLighter;
+    width: 104px;
+    height: 104px;
   }
 
   .ms-Persona-imageCircle {
-    margin: 7px auto;
+    margin: 12px 0 12px 20px;
   }
 
   .ms-Persona-imageCircle,
@@ -45,9 +45,8 @@
   .ms-Persona-presence {
     height: 12px;
     width: 12px;
-    border-radius: 50%;
-    border: 2px solid @ms-color-neutralLighter;
-    right: 15px;
+    border-color: @ms-color-neutralLighter;
+    right: 8px;
     bottom: 12px;
   }
 
@@ -62,22 +61,22 @@
 }
 
 .ms-PersonaCard-actions {
+  .ms-u-borderBox;
   list-style: none;
   margin: 0;
   padding: 0 10px;
   border-bottom: 1px solid @ms-color-neutralTertiaryAlt;
   background-color: @ms-color-white;
-  .ms-u-borderBox;
-  height: 50px;
+  height: 48px;
 }
 
 .ms-PersonaCard-action {
   display: inline-block;
   cursor: pointer;
-  font-size: 17px;
-  height: 50px;
-  line-height: 32px;
-  padding: 10px;
+  font-size: @ms-font-size-l;
+  height: 48px;
+  line-height: 48px;
+  padding: 0 10px;
   color: @ms-color-neutralSecondary;
   position: relative;
   .ms-u-borderBox;
@@ -96,17 +95,17 @@
 
     // Arrow
     &:after {
+      .ms-u-borderBox;
+      .rotate(45deg);
       content: "";
       width: 10px;
       height: 10px;
       border: 1px solid @ms-color-neutralTertiaryAlt;
       background-color: @ms-color-white;
-      .ms-u-borderBox;
       position: absolute;
-      .rotate(45deg);
       border-right: none;
       border-bottom: none;
-      bottom: -5px;
+      bottom: -4px;
       left: 15px;
     }
   }
@@ -115,7 +114,6 @@
 .ms-PersonaCard-overflow {
   .ms-PersonaCard-action;
   font-size: @ms-font-size-m;
-  font-family: @ms-font-family-semilight;
   color: @ms-color-neutralPrimary;
   float: right;
   margin-top: -1px;
@@ -126,21 +124,11 @@
 }
 
 .ms-PersonaCard-orgChart {
-  color: @ms-color-neutralSecondary;
-  font-size: 17px;
-  line-height: 30px;
   position: absolute;
   right: 12px;
-  text-align: center;
   top: 0;
-
-  &:hover {
-    color: @ms-color-neutralDark;
-    cursor: pointer;
-  }
 }
 
-// Action details
 .ms-PersonaCard-actionDetailBox {
   min-height: 48px;
   overflow-y: auto;
@@ -153,8 +141,6 @@
   width: 20%;
   float: left;
   min-height: 48px;
-  font-family: @ms-font-family-semilight;
-  font-size: @ms-font-size-m;
   color: @ms-color-neutralSecondary;
   padding: 9px 20px;
   transition: max-height @ms-duration2 @ms-ease1 .2s;
@@ -172,7 +158,7 @@
   }
 }
 
-// Active Items 
+// Active detail items 
 .ms-PersonaCard-detailChat,
 .ms-PersonaCard-detailPhone,
 .ms-PersonaCard-detailVideo,
@@ -251,61 +237,32 @@
 .ms-PersonaCard-detailLine {
   color: @ms-color-neutralPrimary;
   line-height: 30px;
-
-  a {
-    // TODO: There should be a component for links, or common mixin to apply.
-    color: @ms-color-themePrimary;
-    text-decoration: none;
-  }
 }
 
-// A label for a detail line.
 .ms-PersonaCard-detailLabel {
   color: @ms-color-neutralSecondary;
 }
 
-
-// Org chart
 .ms-PersonaCard-action.ms-PersonaCard-orgChart {
   &:after {
-    display: none;
+    display: none; // Hide arrow for orgchart action
   }
 }
 
-// Org list items
-.ms-PersonaCard.ms-PersonaCard--circles .ms-OrgChart-listItem {
-  height: 50px;
-  width: 100%;
-  position: relative;
-  list-style: none;
-  margin-bottom: 3px;
 
-  .ms-Persona-imageArea {
-    width: 50px;
-    height: 50px;
-    background-color: @ms-color-white;
+//== Modifier: Persona card with square personas
+//
+.ms-PersonaCard.ms-PersonaCard--square {
+
+  .ms-PersonaCard-persona {
+    .ms-Persona-imageCircle {
+      margin: 0;
+    }
+
+    .ms-Persona-primaryText {
+      font-size: @ms-font-size-l;
+    }
   }
-
-  .ms-Persona-imageCircle {
-    width: 50px;
-    height: 50px;
-    margin: 0;
-    overflow: hidden;
-  }
-}
-
-// Circle presence in orgchart list
-.ms-PersonaCard.ms-PersonaCard--circles 
-.ms-OrgChart-list .ms-Persona-presence {
-  position: absolute;
-  height: 10px;
-  width: 10px;
-  border-radius: 50%;
-  top: auto;
-  left: auto;
-  right: 2px;
-  bottom: -1px;
-  border: 2px solid @ms-color-white;
 }
 
 
@@ -320,5 +277,4 @@
     max-width: 360px;
     position: relative;
   }
-
 }
