--- a/src/components/PersonaCard/PersonaCard.Square.html
+++ b/src/components/PersonaCard/PersonaCard.Square.html
@@ -1,6 +1,6 @@
 <div class="ms-PersonaCard ms-PersonaCard--square">
   <div class="ms-PersonaCard-persona">
-    <div class="ms-Persona">
+    <div class="ms-Persona ms-Persona--square ms-Persona--xl">
       <div class="ms-Persona-imageArea">
         <div class="ms-Persona-imageCircle">
           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
@@ -27,18 +27,18 @@
   <div class="ms-PersonaCard-actionDetailBox">
     <ul id="detailList" class="ms-PersonaCard-detailChat">
       <li id="chat" class="ms-PersonaCard-actionDetails detail-1">
-        <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Lync:</span> <a href="#">Start Lync call</a></div>
+        <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Lync:</span> <a class="ms-Link" href="#">Start Lync call</a></div>
       </li>
       <li id="phone" class="ms-PersonaCard-actionDetails detail-2">
         <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Personal:</span> 555.206.2443</div>
         <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Work:</span> 555.929.8240</div>
       </li>
       <li id="video" class="ms-PersonaCard-actionDetails detail-3">
-        <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Skype:</span> <a href="#">Start Skype call</a></div>
+        <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Skype:</span> <a class="ms-Link" href="#">Start Skype call</a></div>
       </li>
       <li id="mail" class="ms-PersonaCard-actionDetails detail-4">
-        <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Personal:</span> <a href="mailto:alton.lafferty@outlook.com">alton.lafferty@outlook.com</a></div>
-        <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Work:</span> <a href="mailto:alton.lafferty@outlook.com">altonlafferty@contoso.com</a>
+        <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Personal:</span> <a class="ms-Link" href="mailto:alton.lafferty@outlook.com">alton.lafferty@outlook.com</a></div>
+        <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Work:</span> <a class="ms-Link" href="mailto:alton.lafferty@outlook.com">altonlafferty@contoso.com</a>
       </li>
       <!-- org chart -->
       <li id="org" class="ms-PersonaCard-actionDetails detail-5">
@@ -47,11 +47,11 @@
               <ul class="ms-OrgChart-list">
                   <li class="ms-OrgChart-listItem">
                     <button class="ms-OrgChart-listItemBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <div class="ms-Persona-imageCircle">
                             <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                            <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                            <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                           </div>
                           <div class="ms-Persona-presence"></div>
                         </div>
@@ -64,11 +64,11 @@
                   </li>
                   <li class="ms-OrgChart-listItem">
                     <button class="ms-OrgChart-listItemBtn">
-                      <div class="ms-Persona">
+                      <div class="ms-Persona ms-Persona--square">
                         <div class="ms-Persona-imageArea">
                           <div class="ms-Persona-imageCircle">
                             <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                            <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                            <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                           </div>
                           <div class="ms-Persona-presence"></div>
                         </div>                            
@@ -86,11 +86,11 @@
             <ul class="ms-OrgChart-list">
                 <li class="ms-OrgChart-listItem">
                   <button class="ms-OrgChart-listItemBtn">
-                    <div class="ms-Persona">
+                    <div class="ms-Persona ms-Persona--square">
                       <div class="ms-Persona-imageArea">
                         <div class="ms-Persona-imageCircle">
                           <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                          <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                          <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                         </div>
                         <div class="ms-Persona-presence"></div>
                       </div>                            
@@ -108,11 +108,11 @@
             <ul class="ms-OrgChart-list">
               <li class="ms-OrgChart-listItem">
                 <button class="ms-OrgChart-listItemBtn">
-                  <div class="ms-Persona">
+                  <div class="ms-Persona ms-Persona--square">
                     <div class="ms-Persona-imageArea">
                       <div class="ms-Persona-imageCircle">
                         <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                        <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                        <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                       </div>
                       <div class="ms-Persona-presence"></div>
                     </div>                            
@@ -125,11 +125,11 @@
               </li>
               <li class="ms-OrgChart-listItem">
                 <button class="ms-OrgChart-listItemBtn">
-                  <div class="ms-Persona">
+                  <div class="ms-Persona ms-Persona--square">
                     <div class="ms-Persona-imageArea">
                       <div class="ms-Persona-imageCircle">
                         <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                        <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                        <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                       </div>
                       <div class="ms-Persona-presence"></div>
                     </div>                            
@@ -142,11 +142,11 @@
               </li>
               <li class="ms-OrgChart-listItem">
                 <button class="ms-OrgChart-listItemBtn">
-                  <div class="ms-Persona">
+                  <div class="ms-Persona ms-Persona--square">
                     <div class="ms-Persona-imageArea">
                       <div class="ms-Persona-imageCircle">
                         <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                        <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                        <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                       </div>
                       <div class="ms-Persona-presence"></div>
                     </div>                            
@@ -159,11 +159,11 @@
               </li>
               <li class="ms-OrgChart-listItem">
                 <button class="ms-OrgChart-listItemBtn">
-                  <div class="ms-Persona">
+                  <div class="ms-Persona ms-Persona--square">
                     <div class="ms-Persona-imageArea">
                       <div class="ms-Persona-imageCircle">
                         <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-                        <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+                        <img class="ms-Persona-image" src="../persona/Persona.Person2.png">
                       </div>
                       <div class="ms-Persona-presence"></div>
                     </div>                            
