- Changed iconOnly to be a modifier.

--- a/src/components/CommandBar/CommandBar.html
+++ b/src/components/CommandBar/CommandBar.html
@@ -12,7 +12,7 @@
     </a>
   </div>  
   <div class="ms-CommandBar-sideCommands"> 
-    <div class="ms-CommandBarItem ms-CommandBarItem-iconOnly">
+    <div class="ms-CommandBarItem icon-only">
         <div class="ms-CommandBarItem-linkWrapper">
             <div class="ms-CommandBarItem-link">
                 <span class="ms-CommandBarItem-icon ms-Icon ms-Icon--circleFilled"></span>
@@ -96,7 +96,7 @@
       </div>
     </div>
     <!-- Overflow Command -->
-    <div class="ms-CommandBarItem ms-CommandBarItem-iconOnly ms-CommandBarItem-overflow">
+    <div class="ms-CommandBarItem icon-only ms-CommandBarItem-overflow">
       <div class="ms-CommandBarItem-linkWrapper">
         <div class="ms-CommandBarItem-link">
           <span class="ms-CommandBarItem-icon ms-Icon ms-Icon--ellipsis"></span>
