--- a/src/components/CommandBar/CommandBar.less
+++ b/src/components/CommandBar/CommandBar.less
@@ -144,7 +144,7 @@
 }
 
 // For commands with only an icon
-.ms-CommandBarItem-iconOnly {
+.ms-CommandBarItem.icon-only {
   .ms-CommandBarItem-chevronDown,
   .ms-CommandBarItem-commandText {
     display: none;
