Modify HTML truncation note

--- a/src/components/PersonaCard/PersonaCard.html
+++ b/src/components/PersonaCard/PersonaCard.html
@@ -9,7 +9,7 @@
         <div class="ms-Persona-presence"></div>
       </div>
       <div class="ms-Persona-details">
-        <!-- Use title attribute to display full text in the event of truncation-->
+        <!-- Use title attribute to display full text in the event of primaryText truncation -->
         <div class="ms-Persona-primaryText" title="Alton Lafferty">Alton Lafferty</div>
         <div class="ms-Persona-secondaryText">Interior Designer, Contoso</div>
         <div class="ms-Persona-tertiaryText">Office: 7/1234</div>
