Update list template with new list item markup. Add grid variant

--- a/src/components/List/List.Grid.html
+++ b/src/components/List/List.Grid.html
@@ -1,4 +1,4 @@
-<ul class="ms-List">
+<ul class="ms-List ms-List--grid">
   <div class="ms-ListItem is-unread is-selectable">
     <span class="ms-ListItem-primaryText">Tanya Pierce</span>
     <span class="ms-ListItem-secondaryText">Meeting notes</span>
