--- a/src/components/ContextualMenu/ContextualMenu.Multiselect.html
+++ b/src/components/ContextualMenu/ContextualMenu.Multiselect.html
@@ -1,4 +1,4 @@
-<ul class="ms-ContextualMenu is-open">
+<ul class="ms-ContextualMenu ms-ContextualMenu--multiselect is-open">
   <li class="ms-ContextualMenu-item ms-ContextualMenu-item--header">SORT BY</li>
   <li class="ms-ContextualMenu-item"><a class="ms-ContextualMenu-link" href="#">Date</a></li>
   <li class="ms-ContextualMenu-item"><a class="ms-ContextualMenu-link" href="#">Sender</a></li>
