--- a/src/components/Callout/Callout.Oobe.html
+++ b/src/components/Callout/Callout.Oobe.html
@@ -1,6 +1,6 @@
-<div class="ms-Callout">
+<div class="ms-Callout ms-Callout--OOBE ms-Callout--arrowLeft">
   <div class="ms-Callout-main">
-    <div class="ms-Callout-header ms-bg-color-themePrimary">
+    <div class="ms-Callout-header">
       <p class="ms-Callout-title">All of your favorite people</p>
     </div>
     <div class="ms-Callout-inner">
