--- a/src/components/Callout/Callout.Peek.html
+++ b/src/components/Callout/Callout.Peek.html
@@ -1,4 +1,4 @@
-<div class="ms-Callout">
+<div class="ms-Callout ms-Callout--peek ms-Callout--arrowLeft">
   <div class="ms-Callout-main">
     <div class="ms-Callout-header">
       <p class="ms-Callout-title">Uploaded 2 items to <span class="ms-Link">Alton's OneDrive</span></p>
