--- a/src/components/Callout/Callout.html
+++ b/src/components/Callout/Callout.html
@@ -1,4 +1,4 @@
-<div class="ms-Callout">
+<div class="ms-Callout ms-Callout--arrowLeft">
   <div class="ms-Callout-main">
     <div class="ms-Callout-header">
       <p class="ms-Callout-title">All of your favorite people</p>
