Include label dependency. Update template files with correct classes

--- a/src/components/TextField/TextField.Multiline.html
+++ b/src/components/TextField/TextField.Multiline.html
@@ -1,4 +1,4 @@
-<div class="ms-TextField">
+<div class="ms-TextField ms-TextField--multiline">
   <label class="ms-Label">Enter street</label>
   <textarea class="ms-TextField-field"></textarea>
 </div>
