--- a/src/components/TextField/TextField.Placeholder.html
+++ b/src/components/TextField/TextField.Placeholder.html
@@ -1,4 +1,4 @@
-<div class="ms-TextField">
+<div class="ms-TextField ms-TextField--placeholder">
   <label class="ms-Label">Given name</label>
   <input class="ms-TextField-field">
 </div>
