--- a/src/components/TextField/TextField.Underlined.html
+++ b/src/components/TextField/TextField.Underlined.html
@@ -1,4 +1,4 @@
-<div class="ms-TextField">
+<div class="ms-TextField ms-TextField--underlined">
   <label class="ms-Label">Name:</label>
   <input class="ms-TextField-field">
 </div>
