--- a/src/components/Persona/Persona.Presence.Blocked.html
+++ b/src/components/Persona/Persona.Presence.Blocked.html
@@ -1,3 +1,4 @@
+<!-- Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license. See LICENSE in the project root for license information. -->
 
 <div class="ms-Persona ms-Persona--blocked">
   <div class="ms-Persona-imageArea">
