--- a/src/less/_Fabric.Icons.Font.less
+++ b/src/less/_Fabric.Icons.Font.less
@@ -6,13 +6,17 @@
 // Icon font-family definition
 
 
+/*
+  Your use of the content in the files referenced here are subject to the terms of the license at https://appsforoffice.microsoft.com/fabric/fonts/License.txt
+*/
+
 @font-face {
   font-family: 'Office365Icons';
-  src: url('../fonts/office365icons.eot?');
-  src: url('../fonts/office365icons.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/office365icons.woff?') format('woff'),
-       url('../fonts/office365icons.ttf?') format('truetype'),
-       url('../fonts/office365icons.svg?#office365icons') format('svg');
+  src: url('@{ms-font-directory}/icons/office365icons.eot?');
+  src: url('@{ms-font-directory}/icons/office365icons.eot?#iefix') format('embedded-opentype'),
+       url('@{ms-font-directory}/icons/office365icons.woff?') format('woff'),
+       url('@{ms-font-directory}/icons/office365icons.ttf?') format('truetype'),
+       url('@{ms-font-directory}/icons/office365icons.svg?#office365icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
